--- a/shopeemain/orderformpage.html
+++ b/shopeemain/orderformpage.html
@@ -5,115 +5,6 @@
   <meta charset="utf-8">
   <title>Nos Construction Supply</title>
   <link rel="stylesheet" type="text/css" href="css/orderform.css">
-  <style>
-    body {
-      font-family: 'Poppins', sans-serif;
-      background-image: url(img/background.jpg);
-      background-repeat: no-repeat;
-      background-attachment: fixed;
-      background-size: 100% 100%;
-    }
-
-    .navlogo {
-      width: 50px;
-      margin-top: 10px;
-    }
-
-    .navcart {
-      margin-top: 5px;
-      width: 20px;
-    }
-
-    .navbar {
-      display: flex;
-      height: 75px;
-      align-items: center;
-      justify-content: space-between;
-      padding: 0 20px;
-    }
-
-    .navbar a {
-      float: left;
-      display: block;
-      color: #f2f2f2;
-      text-align: center;
-      padding: 1px 20px 1px 20px;
-      text-decoration: none;
-    }
-
-    .navbar a:hover {
-      box-shadow: 0px 0px 40px #000000;
-      border-radius: 20px;
-
-    }
-
-    .navbar .search-bar {
-      margin-left: 10px;
-      margin-right: 10px;
-      border: 0px;
-      border-radius: 5px;
-      flex: 1;
-      padding: 5px;
-    }
-
-    .navbar span {
-      float: right;
-      display: block;
-      color: #f2f2f2;
-      text-align: center;
-      padding: 14px 20px;
-      text-decoration: none;
-      cursor: pointer;
-    }
-
-    .dropdown-content {
-      display: none;
-      position: absolute;
-      background-color: #f9f9f9;
-      min-width: 160px;
-      z-index: 1;
-    }
-
-    .dropdown-content a {
-      color: black;
-      padding: 12px 16px;
-      text-decoration: none;
-      display: block;
-      text-align: left;
-    }
-
-    .dropdown-content a:hover {
-      background-color: #ddd;
-    }
-
-    .user-info form{
-      margin-top: 20px;
-      padding: 20px;
-      padding-top: 1px;
-      border-radius: 20px;
-      background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
-      backdrop-filter: blur(10px);
-      -webkit-backdrop-filter: blur(10px);
-      border-radius: 20px;
-      border: 1px solid rgba(255, 255, 255, 0.18);
-      box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
-    }
-    #fname, #lname, #address, #contactno{
-      margin-left: 26%;
-      border-radius: 5px;
-      border: 1px solid whitesmoke;
-      background: none;
-      color: white;
-    }
-    .cart-item{
-      background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
-      backdrop-filter: blur(10px);
-      -webkit-backdrop-filter: blur(10px);
-      border-radius: 20px;
-      border: 1px solid rgba(255, 255, 255, 0.18);
-      box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
-    }
-  </style>
 </head>
 
 <body>
@@ -148,61 +39,7 @@
   </div>
 
 
-  <script>
-    const cartItemsContainer = document.getElementById('cartItemsContainer');
-    const totalPriceElement = document.getElementById('totalPrice');
-    const itemCountElement = document.getElementById('itemCount');
-    const cartItems = JSON.parse(sessionStorage.getItem('cartItems')) || [];
-
-    let totalPrice = 0;
-    let itemCount = cartItems.length;
-
-    cartItems.forEach(item => {
-      totalPrice += item.price;
-      const itemContainer = document.createElement('div');
-      itemContainer.classList.add('cart-item');
-
-      const image = document.createElement('img');
-      image.src = item.imageUrl;
-      itemContainer.appendChild(image);
-
-      const name = document.createElement('p');
-      name.textContent = item.name;
-      itemContainer.appendChild(name);
-
-      const price = document.createElement('p');
-      price.textContent = `Price: $${item.price.toFixed(2)}`;
-      itemContainer.appendChild(price);
-
-      cartItemsContainer.appendChild(itemContainer);
-    });
-
-    totalPriceElement.textContent = `$${totalPrice.toFixed(2)}`;
-    itemCountElement.textContent = itemCount;
-
-    function cancelOrder() {
-      sessionStorage.removeItem('cartItems');
-      window.location.href = 'index.html';
-    }
-
-    function placeOrder() {
-        const firstName = document.getElementById('fname').value;
-        const lastName = document.getElementById('lname').value;
-        const address = document.getElementById('address').value;
-        const contactNo = document.getElementById('contactno').value;
-
-        const shippingDetails = {
-            firstName: firstName,
-            lastName: lastName,
-            address: address,
-            contactNo: contactNo
-        };
-
-        sessionStorage.setItem('shippingDetails', JSON.stringify(shippingDetails));
-
-        window.location.href = 'orderconfirmationpage.html';
-    }
-  </script>
+  <script src="js/orderform.js"></script>
 </body>
   <script src="js/loginNavBar.js"></script>
 
